--- a/inventory.html
+++ b/inventory.html
@@ -1,1 +1,2 @@
-[{"title":"testing-3","url":"https://www.pngfind.com/pngs/m/436-4369822_50-x-50-pixel-art-hd-png-download.png"}]
+[{"title":"testing-3","url":"https://www.pngfind.com/pngs/m/436-4369822_50-x-50-pixel-art-hd-png-download.png"},
+ {"title":"dylan-rtr","url":"https://images.squarespace-cdn.com/content/v1/5c06e71aec4eb7badeadf0c2/1555420735417-SHP3DHZ5Y5THEA7ZRNF3/BD-hatscarf.jpg"]
